<resources>
    <string name="app_name">Midwifery Application</string>
    <string name="logo">Logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_faq">FAQ</string>
    <string name="title_profile">Profil</string>
    <string name="kemahasiswaan">KEMAHASISWAAN</string>
    <string name="back">back</string>
    <string name="kampus">POLITEKNIK KESEHATAN\nJAKARTA 1\nJURUSAN KEBIDANAN</string>
    <string name="berita"><![CDATA[Berita & Informasi Jurusan Kebidanan]]></string>
    <string name="sejarah">SEJARAH JURUSAN\nKEBIDANAN</string>
    <string name="sejarah2">Gedung Pendidikan Terpadu Poltekkes Jakarta I Jurusan Kebidanan. Jl. Wijayakusuma Raya No. 47-48 Cilandak Jakarta Selatan, telp : 021-27656913</string>
    <string name="sejarah3">Gedung Lama Poltekkes Jakarta I Jurusan Kebidanan. Jl. RS. Fatmawati Cilandak Barat Jakarta Selatan</string>
    <string name="sejarah4">Gedung Lama Poltekkes Jakarta I Jurusan Kebidanan. Jl. RS. Fatmawati Cilandak Barat Jakarta Selatan</string>
    <string name="visi"><![CDATA[VISI & MISI JURUSAN\nKEBIDANAN]]></string>
    <string name="akreditasi">AKREDITASI JURUSAN \nKEBINANAN</string>
    <string name="donwload">Silahkan Download Akreditasi \nSelengkapnya pada link Berikut ini :</string>
    <string name="link">http://link.kemkes.go.id/AkreditasiPKJ1Kebidanan</string>
    <string name="tenaga">TENAGA PENDIDIK DAN\nKEPENDIDIKAN</string>
    <string name="struktur">STRUKTUR ORGANISASI\n2024 - 2028</string>
</resources>