<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.akreditas.AkreditasActivity">

    <!-- Vector 1 -->
    <ImageView
        android:id="@+id/vector1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/vector12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Tombol Back -->
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_circle"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Teks akreditas -->
    <TextView
        android:id="@+id/tv_kemahasiswaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/akreditasi"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/vector2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/vector14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        tools:layout_editor_absoluteY="91dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="220dp"
        android:layout_height="170dp"
        android:layout_marginTop="-100dp"
        android:layout_marginStart="50dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/vector1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/akreditasi"
                android:layout_gravity="center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_download_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/donwload"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/link"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_download_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/vector3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/vector13"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@+id/tv_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
