<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sejarah.SejarahActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sejarah"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:elevation="10dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vector8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Tombol Back -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_circle"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vector9"
            android:layout_marginTop="500dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="300dp"
            android:layout_height="215dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="31dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_faq"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sejarah1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="300dp"
            android:layout_height="215dp"
            android:layout_marginTop="70dp"
            android:layout_marginStart="31dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sejarah2" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_sejarah2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sejarah2"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/card2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="300dp"
            android:layout_height="215dp"
            android:layout_marginTop="70dp"
            android:layout_marginStart="31dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_sejarah2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sejarah3" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_sejarah3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sejarah3"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/card3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="300dp"
            android:layout_height="215dp"
            android:layout_marginTop="70dp"
            android:layout_marginStart="31dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_sejarah3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sejarah4" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_sejarah4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sejarah4"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/card4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/tv_sejarah4"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>