<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_active"
        tools:context=".ui.home.HomeFragment">

        <!-- Vector 1 -->
        <ImageView
            android:id="@+id/vector1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/vector5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- LOGO -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:src="@drawable/logo"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Text Kampus -->
        <TextView
            android:id="@+id/tv_kampus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kampus"
            android:textColor="@color/blue_active"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Vector 2 -->
        <ImageView
            android:id="@+id/vector2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:src="@drawable/vector2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/imagehome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/home1"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vector2"/>

        <TextView
            android:id="@+id/tv_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berita"
            android:textColor="@color/white"
            android:layout_marginTop="170dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imagehome"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_berita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Gambar -->
                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home7" />

                <!-- Judul -->
                <TextView
                    android:id="@+id/eventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SELEKSI PENERIMAAN MAHASISWA BARU BERSAMA..."
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:paddingTop="8dp"
                    android:textColor="@android:color/black"/>

                <!-- Tanggal -->
                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="20 Januari, 2025"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="4dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_berita"
            app:layout_constraintStart_toEndOf="@id/card1"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Gambar -->
                <ImageView
                    android:id="@+id/eventImage2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home2" />

                <!-- Judul -->
                <TextView
                    android:id="@+id/eventTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SEMINAR KEBIDANAN NASIONAL MKMA..."
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:paddingTop="8dp"
                    android:textColor="@android:color/black"/>

                <!-- Tanggal -->
                <TextView
                    android:id="@+id/eventDate2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16 Desember, 2024"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="4dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Gambar -->
                <ImageView
                    android:id="@+id/eventImage3"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home3" />

                <!-- Judul -->
                <TextView
                    android:id="@+id/eventTitle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SELAMAT ATAS KELULUSAN 100% UJI KOMPETENSI..."
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:paddingTop="8dp"
                    android:textColor="@android:color/black"/>

                <!-- Tanggal -->
                <TextView
                    android:id="@+id/eventDate3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="28 Agustus, 2024"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="4dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Gambar -->
                <ImageView
                    android:id="@+id/eventImage4"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home4" />

                <!-- Judul -->
                <TextView
                    android:id="@+id/eventTitle4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="PENGUMUMAN PENDAFTARAN SIPENMARU JALUR..."
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:paddingTop="8dp"
                    android:textColor="@android:color/black"/>

                <!-- Tanggal -->
                <TextView
                    android:id="@+id/eventDate4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="26 Januari, 2024"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="4dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Gambar -->
                <ImageView
                    android:id="@+id/eventImage5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home5" />

                <!-- Judul -->
                <TextView
                    android:id="@+id/eventTitle5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="UNIT KERJA DENGAN PENYERAPAN ANGGARAN TER..."
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:paddingTop="8dp"
                    android:textColor="@android:color/black"/>

                <!-- Tanggal -->
                <TextView
                    android:id="@+id/eventDate5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="26 Januari, 2024"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="4dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Gambar -->
                <ImageView
                    android:id="@+id/eventImage6"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home6" />

                <!-- Judul -->
                <TextView
                    android:id="@+id/eventTitle6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="GERMAS JURUSAN KEBIDANAN POLTEKKES KEMENKES..."
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:paddingTop="8dp"
                    android:textColor="@android:color/black"/>

                <!-- Tanggal -->
                <TextView
                    android:id="@+id/eventDate6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="18 September, 2023"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="4dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_mahasiswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kemahasiswaan |"
            android:textSize="16sp"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_akreditas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Akreditas |"
            android:textSize="16sp"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_fasilitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fasilitas |"
            android:textSize="16sp"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_galeri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Galeri"
            android:textSize="16sp"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/textFlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:constraint_referenced_ids="tv_mahasiswa,tv_akreditas,tv_fasilitas,tv_galeri"
            app:flow_wrapMode="none"
            app:flow_horizontalGap="5dp"
            app:layout_constraintTop_toBottomOf="@id/card6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:flow_horizontalAlign="start" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/card5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
